<resources>
    <string name="app_name">Blood Test Reading - Rose Song, Bosco Kwan</string>
    <string name="hintUsername"> Username</string>
    <string name="hintSystolic">Systolic </string>
    <string name="hintDialostic">Dialostic </string>
    <string name="hintTime">Time: </string>
    <string name="hintCondition">Condition: </string>
    <string name="sytolic">Systolic:  </string>
    <string name="dialostic">Dialostic:  </string>
    <string name="username">Username: </string>
    <string name="btnAddBloodReading">Add Blood Reading</string>
    <string name="enterNewBloodReading">Enter New Blood Reading</string>
    <string name="btnUpdate">Update</string>
    <string name="btnDelete">Delete</string>
    <string name="systolic_reading">Systolic Reading:</string>
    <string name="dialostic_reading">Dialostic Reading</string>
    <string name="average_condition">Average Condition:</string>
    <string name="monthlyReading" type="id">montlyReading</string>
    <string name="monthlyReadingSystolic" type="id">montlyReadingSystolic</string>
    <string name="monthlyReadingSiastolic" type="id">monthlyDialostic</string>
    <string name="monthly_readings">Monthly Readings</string>
    <string name="enter_in_a_username">Enter in a username</string>
    <string name="monthly_systolic">Monthly Systolic:</string>
    <string name="monthly_dialostic">Monthly Dialostic:</string>
    <string name="monthly_condition">Monthly Condition:</string>
    <string name="monthly_view">Monthly View</string>
    <string name="confirm">Confirm</string>
    <string name="enter">enter</string>
    <string name="back">Back</string>

</resources>
