<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextSystolic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintSystolic"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextDialostic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintDialostic"
        android:inputType="number" />



    <Button
        android:id="@+id/buttonAddBloodreading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAddBloodReading" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="25dp" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="152dp"
            android:layout_height="match_parent"
            android:text="@string/monthly_readings"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/monthlyDate"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:textAlignment="center" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="42dp">

        <TextView
            android:id="@+id/textSystolic1"
            android:layout_width="152dp"
            android:layout_height="39dp"
            android:textAlignment="center"
            android:text="@string/systolic_reading" />

        <TextView
            android:id="@+id/textSystolic"
            android:layout_width="258dp"
            android:textAlignment="center"
            android:layout_height="39dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="43dp">

        <TextView
            android:id="@+id/textDialostic1"
            android:layout_width="152dp"
            android:layout_height="39dp"
            android:textAlignment="center"
            android:text="@string/dialostic_reading" />

        <TextView
            android:id="@+id/textDialostic"
            android:layout_width="258dp"
            android:textAlignment="center"
            android:layout_height="39dp" />
    </TableRow>

    <TableRow
        android:layout_width="400dp"
        android:layout_height="43dp">

        <TextView
            android:id="@+id/avgConditionText1"
            android:layout_width="152dp"
            android:textAlignment="center"
            android:layout_height="39dp"
            android:text="@string/average_condition" />

        <TextView
            android:id="@+id/avgConditionText"
            android:layout_width="265dp"
            android:textAlignment="center"
            android:layout_height="match_parent" />
    </TableRow>

    <ListView
        android:id="@+id/lvBloodReading"
        android:layout_width="match_parent"
        android:layout_height="424dp" />

</LinearLayout>
