<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/systolicText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sytolic" />

    <TextView
        android:id="@+id/textViewSystolic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/dialosticText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialostic" />

    <TextView
        android:id="@+id/textViewDialostic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/timeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hintTime" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/conditionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hintCondition" />

    <TextView
        android:id="@+id/textViewCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />
    </LinearLayout>
</LinearLayout>
